Reset CSS and avoid overlapping items

--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,10 @@
 }
 
 .App {
-  height: 100vh;
-  width: 100vw;
   background-color: var(--color-background);
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  height: 100vh;
+  width: 100vw;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -21,21 +19,41 @@
 .App-header {
     display: flex;
     flex-direction: column;
-    flex-wrap: none;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    margin-bottom: 1em;
 }
 
 @media (orientation: landscape) {
+  .App {
+      flex-direction: row;
+      flex-wrap: nowrap;
+      overflow: scroll;
+  }
   .App-header {
+      min-width: 15em;
       width: calc(95vmax - 100vmin);
+      margin-right: 1rem;
+      margin-left: 1rem;
+  }
+  .App-content {
+      margin-right: 1rem;
   }
 }
 
 @media (orientation: portrait) {
+  .App {
+      flex-direction: column;
+      flex-wrap: nowrap;
+      overflow: scroll;
+  }
   .App-header {
-      max-height: calc(95vmax - 100vmin);
+      height: auto;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+  }
+  .App-content {
+      margin-bottom: 1rem;
   }
 }
 
